--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,15 @@ nosetests.xml
 *.komodoproject
 
 .DS_Store
+
+# Java
+.gradle
+build/
+.idea/
+*.iml
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
